# lmm

./: .gitignore  README.md  pyproject.toml
lmm/: __init__.py  chat.py  config.py  engine.py  hooks.py
lmm/adapters/: __init__.py  base.py  mlx_lm_adapter.py  registry.py
lmm/memory/: __init__.py  activation_logger.py  base.py  consolidation_lora_ffn.py  hash_gradient.py  identity.py  lora_on_user.py  registry.py
scripts/: benchmark_compare_modules.py  general_memorization_benchmark.py  memorization_smoke.py  multistep_dense_relevance_benchmark.py  multistep_sparse_relevance_benchmark.py  single_fact_name_benchmark.py
tests/: test_consolidation_lora_ffn.py  test_engine.py  test_memory_hook.py
