[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmm"
version = "0.1.0"
description = "Local Memory Module experiments for chat models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mlx-lm>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
lmm-chat = "lmm.chat:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
